--- a/src/styles/segmented-switch/properties.css
+++ b/src/styles/segmented-switch/properties.css
@@ -1,4 +1,5 @@
 @import "../colors.css";
+@import "../spacing.css";
 @import "../typography.css";
 
 :root {
@@ -14,7 +15,6 @@
   --context-switch-label-color: var(--color-light-grey-100);
   --context-switch-label-font-size: 10px;
   --context-switch-label-height: var(--spacing-medium);
-  --context-switch-label-line-height: var(--spacing-medium);
   --context-switch-label-padding: 0 14px;
 
   --context-switch-checked-background-color: var(--color-light-greenish-100);
